[tool.poetry]
name = "phasic-policy-gradient"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym3 = "^0.3.3"
procgen = "^0.10.7"
torch = "^1.11.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
wandb = "^0.12.16"
tensorboard = "^2.9.0"
mpi4py = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
